@startuml SyncRekuest_Database_Schema

!define TABLENAME(name) class name << (T, #FFAAAA) >>
!define PRIMARY_KEY(x) <b>PK:</b> x
!define FOREIGN_KEY(x) <b>FK:</b> x
!define UNIQUE_KEY(x) <b>UK:</b> x

entity "USER" as USER {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>email</b>: String [UNIQUE]
  * <b>passwordHash</b>: String
  * <b>displayName</b>: String
  * <b>role</b>: Enum (ATTENDEE|DJ|ADMIN)
  * <b>isActive</b>: Boolean
  lastLoginAt: Date
  createdAt: Date
  updatedAt: Date
}

entity "EVENT" as EVENT {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>name</b>: String
  description: String
  * <b>ownerId</b>: ObjectId [FOREIGN_KEY -> USER]
  * <b>accessCode</b>: String [UNIQUE]
  qrCodeUrl: String
  * <b>state</b>: Enum (DRAFT|LIVE|ENDED|CANCELLED)
  * <b>startsAt</b>: Date
  endedAt: Date
  cancelledAt: Date
  cancelledReason: String
  currentSongId: ObjectId [FOREIGN_KEY -> SONG]
  settings: Object
  createdAt: Date
  updatedAt: Date
}

entity "EVENT_MEMBER" as EVENT_MEMBER {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>eventId</b>: ObjectId [FOREIGN_KEY -> EVENT]
  * <b>userId</b>: ObjectId [FOREIGN_KEY -> USER]
  * <b>role</b>: Enum (OWNER|DJ|MODERATOR)
  * <b>permissions</b>: Array of String
  * <b>addedBy</b>: ObjectId [FOREIGN_KEY -> USER]
  createdAt: Date
  updatedAt: Date
}

entity "PARTICIPANT" as PARTICIPANT {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>eventId</b>: ObjectId [FOREIGN_KEY -> EVENT]
  * <b>nickname</b>: String
  * <b>nicknameLower</b>: String
  socketId: String
  * <b>joinedAt</b>: Date
  * <b>lastSeenAt</b>: Date
  * <b>isBanned</b>: Boolean
  kickedAt: Date
  kickedBy: ObjectId [FOREIGN_KEY -> USER]
  kickReason: String
  bannedAt: Date
  bannedBy: ObjectId [FOREIGN_KEY -> USER]
  banReason: String
  --
  cooldownUntil: Date
  cooldownReason: String
  isPremium: Boolean
  --
  leftAt: Date
  createdAt: Date
  updatedAt: Date
}

entity "SONG" as SONG {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>eventId</b>: ObjectId [FOREIGN_KEY -> EVENT]
  * <b>title</b>: String
  * <b>artist</b>: String
  * <b>requestedBy</b>: ObjectId [FOREIGN_KEY -> PARTICIPANT]
  * <b>status</b>: Enum (PENDING|APPROVED|PLAYING|PLAYED|SKIPPED|REJECTED)
  * <b>voteScore</b>: Number
  * <b>voteCount</b>: Number
  --
  queuePosition: Number
  * <b>sortKey</b>: String
  * <b>pinned</b>: Boolean
  --
  startedPlayingAt: Date
  skippedAt: Date
  skippedBy: ObjectId [FOREIGN_KEY -> USER]
  skippedReason: String
  --
  removedAt: Date
  removedBy: ObjectId [FOREIGN_KEY -> USER]
  removalReason: String
  autoRejectedAt: Date
  --
  createdAt: Date
  updatedAt: Date
}

entity "VOTE" as VOTE {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>songId</b>: ObjectId [FOREIGN_KEY -> SONG]
  * <b>participantId</b>: ObjectId [FOREIGN_KEY -> PARTICIPANT]
  * <b>value</b>: Number (1|-1)
  createdAt: Date
  updatedAt: Date
}

entity "EVENT_ACTION_LOG" as EVENT_ACTION_LOG {
  * <b>_id</b>: ObjectId [PRIMARY_KEY]
  --
  * <b>eventId</b>: ObjectId [FOREIGN_KEY -> EVENT]
  * <b>actorUserId</b>: ObjectId [FOREIGN_KEY -> USER]
  * <b>type</b>: Enum (EVENT_START|EVENT_END|EVENT_CANCEL|PARTICIPANT_KICK|PARTICIPANT_BAN|PARTICIPANT_UNBAN|PARTICIPANT_COOLDOWN|SONG_APPROVE|SONG_REJECT|SONG_REMOVE|SONG_REORDER|SONG_SKIP|SONG_STATUS_CHANGE|SETTINGS_CHANGE)
  participantId: ObjectId [FOREIGN_KEY -> PARTICIPANT]
  songId: ObjectId [FOREIGN_KEY -> SONG]
  meta: Object
  createdAt: Date
  updatedAt: Date
}

' Relationships
USER ||--o{ EVENT : "owns"
USER ||--o{ EVENT_MEMBER : "added_by"
USER ||--o{ EVENT_ACTION_LOG : "performs"

EVENT ||--o{ EVENT_MEMBER : "has"
EVENT ||--o{ PARTICIPANT : "has"
EVENT ||--o{ SONG : "contains"
EVENT ||--o{ VOTE : "tracks"
EVENT ||--o{ EVENT_ACTION_LOG : "logs"

PARTICIPANT ||--o{ SONG : "requests"
PARTICIPANT ||--o{ VOTE : "casts"
PARTICIPANT ||--o{ EVENT_ACTION_LOG : "involved_in"

SONG ||--o{ VOTE : "receives"
SONG ||--o{ EVENT_ACTION_LOG : "tracked_by"

@enduml
